# cli

./: .gitignore  LICENSE  README.md  build.sh  push.sh  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  version.py
supadef/: __init__.py  cli.py  config.py  credentials.py  filesystem.py  links.py  logger.py  network.py  platform.py  push.py  setup.py  util.py  version.py
tests/: test_credentials.yml  test_parse_credentials.py
