[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supadef_TEST"
version = "0.0.5"
authors = [
  { name="Connor McLaughlin", email="connor@fractall.com" },
]
description = "Official command-line interface for supadef ⚡️"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click==8.1.3",
    "typer==0.7.0"
]

[project.urls]
"Homepage" = "https://github.com/connormcl/supadef_cli"
"Bug Tracker" = "https://github.com/connormcl/supadef_cli/issues"

[project.scripts]
supadef = "supadef.cli:app"
