[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supadef"
version = "0.0.9"
authors = [
  { name="Connor McLaughlin", email="connor@fractall.com" },
]
description = "Official command-line interface for supadef ⚡️"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
# This was why it wasn't installing in the test version.
# pip was looking for dependencies in Test PyPi
# https://stackoverflow.com/questions/57321119/pip-does-not-install-dependencies-declared-in-setup-py-with-install-requires
dependencies = [
    "click==8.1.3",
    "typer==0.7.0",
    "requests==2.28.2",
    "pyyaml==6.0"
]

[project.urls]
"Homepage" = "https://github.com/connormcl/supadef_cli"
"Bug Tracker" = "https://github.com/connormcl/supadef_cli/issues"

[project.scripts]
supadef = "supadef.cli:app"
