[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# How to reference requirements.txt
# https://stackoverflow.com/questions/73600082/how-to-reference-a-requirements-txt-in-the-pyproject-toml-of-a-setuptools-projec
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
dynamic = ["dependencies"]
name = "supadef"
version = "0.0.21"
authors = [
  { name="Connor McLaughlin", email="connor@fractall.com" },
]
description = "Official command-line interface for supadef ⚡️"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/connormcl/supadef_cli"
"Bug Tracker" = "https://github.com/connormcl/supadef_cli/issues"

[project.scripts]
supadef = "supadef.cli:app"
